# mechanistic_decomposition_sentences

./: .gitignore  1_probes.ipynb  2_dictionary.ipynb  3_pooling.ipynb  LICENSE  README.md  config.yaml  download_artifacts.py  pyproject.toml  run_pipeline.py
spatgeo-env/: pyvenv.cfg
src/: dictionary_learning.py  generate_word_embeddings.py  run_pipeline.py  train_models.py  train_word_probes.py
src/data/: embed.py  generate.py  generate_syntax.py
src/data/sentence-embeddings/: Alibaba-NLP_gte-large-en-v1.5.pt  intfloat_multilingual-e5-large.pt  sentence-transformers_all-MiniLM-L6-v2.pt  sentence-transformers_all-mpnet-base-v2.pt
src/experiments/: direction_pair_analysis.ipynb  embedding_difference_analysis.ipynb  experiments_compositionality.ipynb  jonathan_compositionality.ipynb  linear_probes.ipynb  multi_label_linear_probes.ipynb  testingmilton.ipynb
src/notebooks/: direction_pair_analysis.ipynb
src/runpod/: probe_factorization.ipynb  probing_word_level.ipynb  vikram_probing_word_level.ipynb  vikram_test.ipynb
src/runpod/trained_models/20250329_175219/: dep_model.pkl  pos_model.pkl  position_model.pkl
src/runpod/trained_models/20250329_175711/: dep_model.pkl  dep_nonlinear.pkl  dep_randrep.pkl  dep_shuffled.pkl  pos_model.pkl  pos_nonlinear.pkl  pos_randrep.pkl  pos_shuffled.pkl  position_model.pkl  position_nonlinear.pkl  position_randrep.pkl  position_shuffled.pkl  (+3 more)
src/utils/: tracking.py
wandb/: latest-run
wandb/run-20250412_113636-5c7n28kw/: run-5c7n28kw.wandb
wandb/run-20250412_113636-5c7n28kw/files/: config.yaml  wandb-metadata.json
(+36 files in other folders)
