[tool.poetry]
name = "llm-geometry"
version = "0.1.0"
description = "Code for the paper Spatial Geometry in Large Language Models"
authors = ["Matthieu Tehenan <mm2833@cam.ac.uk>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
datasets = "^3.3.0"
tqdm = "^4.67.1"
sentence-transformers = "^3.4.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
numpy = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
