[tool.poetry]
name = "mechanistic-decomposition-sentence-embeddings"
version = "0.1.0"
description = "Code for the paper Mechanistic Decomposition of Sentence Embedding Models"
authors = ["Matthieu Tehenan <mm2833@cam.ac.uk>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
datasets = "^3.3.0"
tqdm = "^4.67.1"
sentence-transformers = "^3.4.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
numpy = "<2.0.0"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
openai = "^1.68.2"
huggingface-hub = "^0.29.3"
stanza = "^1.10.1"
nltk = "^3.9.1"
wandb = "^0.16.3"
optuna = "^3.6.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
